hphp/test/zend/good/ext/json/tests/bug41567.php.skipif
<?php if (!extension_loaded('json')) print 'skip'; ?>