hphp/test/zend/bad/ext/spl/tests/dit_001.php.skipif
<?php
if (!defined('GLOB_ERR')) print "skip";